# bob

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CMakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  buildout.cfg  private-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.sh  version.txt
bob/: utils.py
bob/script/: get_versions.py
conda/: conda_build_config.yaml  meta.yaml
doc/: bob-devel-py27.yml  bob-devel-py34.yml  bob-devel-py35.yml  bob-devel.yml  conf.py  example.rst  extra-intersphinx.txt  index.rst  install.rst  links.rst  list.rst  nitpick-exceptions.txt  source.rst  tutorial.rst
doc/envs/: v262py27.yaml  v262py35.yaml  v270py27.yaml  v270py35.yaml  v300py27.yaml  v300py36.yaml
doc/plot/: iris_lda.py  iris_lda_roc.py  show_lena.py
pkgconfig/: bob-package.pc.in  bob.pc.in
python/: MANIFEST.in  README.rst  requirements.txt  setup.py  version.txt
python/bob/io/: utils.py
python/bob/io/test/: test_video.py
python/bob/machine/test/: test_svm.py
python/bob/sp/: main.cc
python/doc/: Compilation.rst  Installation.rst  Optimizing.rst  TutorialsIO.rst  TutorialsPerformance.rst  conf.py  index.rst  links.rst
python/doc/plot/: iris_lda.py  perf_det.py  perf_epc.py  perf_roc.py
src/: CMakeLists.txt  python.cmake
src/ap/python/: CMakeLists.txt
src/bob/: __init__.py  cli.py  click_helper.py
src/core/python/: CMakeLists.txt
src/core/python/random/: CMakeLists.txt
src/io/: CMakeLists.txt
src/io/cxx/: CMakeLists.txt  ImageGifFile.cc  ImageNetpbmFile.cc  pnmio.cc
src/io/python/: CMakeLists.txt
src/ip/python/: CMakeLists.txt
src/machine/python/: CMakeLists.txt
src/math/python/: CMakeLists.txt
src/measure/python/: CMakeLists.txt
src/sp/python/: CMakeLists.txt
src/trainer/python/: CMakeLists.txt
tests/: test_cli.py
